# ztar

./: .gitignore  CHANGELOG.md  DEVELOPER.md  README.md  package.yaml  stack.yaml  ztar.cabal
.circleci/: config.yml
scripts/: install-system-deps.sh  stylish-haskell.sh
src/Codec/Archive/: Tar.hs  ZTar.hs
src/Codec/Archive/Tar/: GZip.hs
src/Codec/Archive/ZTar/: GZip.hs  Path.hs  Tar.hs  Zip.hs
test/: Example.hs  Test.hs  Utilities.hs
