name:                ztar
version:             0.0.2
license:             BSD3
license-file:        LICENSE.md
author:              Brandon Chinn <brandonchinn178@gmail.com>
maintainer:          Brandon Chinn <brandonchinn178@gmail.com>
category:            Codec
synopsis:            Creating and extracting compressed tar archives
description:         Creating and extracting compressed tar archives.
build-type:          Simple
cabal-version:       1.18
extra-doc-files:     CHANGELOG.md, README.md

source-repository head
  type: git
  location: https://github.com/brandonchinn178/ztar.git

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  exposed-modules:    Codec.Archive.ZTar
                      Codec.Archive.ZTar.GZip
                      Codec.Archive.ZTar.Zip
  build-depends:      base >= 4.7 && < 5
                    , bytestring >= 0.10.8 && < 0.11
                    , directory >= 1.3 && < 1.4
                    , filepath >= 1.4.1 && < 1.5
                    , tar >= 0.5 && < 0.6
                    , zip >= 1.0 && < 1.2
                    , zlib >= 0.6 && < 0.7
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
    -Wredundant-constraints -Wnoncanonical-monad-instances

test-suite ztar-test
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            Test.hs
  build-depends:      base
                    , extra
                    , path
                    , path-io
                    , QuickCheck
                    , tasty
                    , tasty-quickcheck
                    , ztar
  ghc-options:
    -Wall -Werror -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
    -Wredundant-constraints -Wnoncanonical-monad-instances
